--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "raw-loader": "^3.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "selenium-webdriver": "^4.0.0-alpha.5",
     "xmlhttprequest": "^1.8.0"
   },
   "scripts": {
